# auto-kudos

./: .coveragerc  .gitignore  .pylintrc  Dockerfile  launch.py  launcher.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: black.yml  publish.yml  pylint.yml  release.yml  test.yml
strava_api/: activity.py  aws.py  credentials.py  data.py  exceptions.py  main.py  networking.py  utils.py
tests/: conftest.py  example.html  test_activity.py  test_credentials.py  test_data.py  test_exceptions.py  test_networking.py  test_utils.py
tests/test_data/: example.html.data  login_page.html.data
