[tool.poetry]
name = "auto-kudos"
version = "1.0.0"
description = ""
authors = ["Diego Alloza González <sralloza@gmail.com>"]
packages = [
    { include = "strava_api" },
]

[tool.poetry.dependencies]
python = "^3.7 || ^3.8 || ^3.9"
"ruamel.yaml" = "^0.17.16"
beautifulsoup4 = "^4.9.3"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
black = {version = "^21.8b0", allow-prereleases = true}
pytest = "^6.2.5"
isort = "^5.9.3"
pylint = "^2.10.2"
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
